<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/topLayout">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_back"
            android:id="@+id/backButton"
            android:contentDescription="@string/content_description_opengs_back" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_share"
            android:background="?android:attr/selectableItemBackground"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:id="@+id/shareButton"
            android:contentDescription="@string/content_description_opengs_share" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_refresh"
            android:background="?android:attr/selectableItemBackground"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/shareButton"
            android:id="@+id/refreshButton"
            android:visibility="invisible"
            android:contentDescription="@string/content_description_opengs_refresh" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/backButton"
            android:layout_toStartOf="@id/refreshButton"
            android:gravity="center"
            android:text="@string/opengs_gif_title"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="24sp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/white"
            android:id="@+id/gifLabel"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottomLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playGIFLayout"
            android:visibility="gone">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_close"
                android:id="@+id/gifLabelCloseButton"
                android:contentDescription="@string/content_description_opengs_close_gif_label" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                android:layout_toStartOf="@id/gifLabelCloseButton"
                android:text="@string/opengs_sound_error_label"
                android:textColor="@android:color/white"
                android:visibility="visible"
                android:id="@+id/playGIFLabel"/>


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:layout_below="@id/playGIFLayout"
            android:id="@+id/separator1"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="24sp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/separator1"
            android:textColor="@android:color/white"
            android:text="@string/opengs_sound_title"
            android:id="@+id/soundLabel"/>

        <!--<fragment-->
            <!--android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"-->
            <!--android:layout_width="200dp"-->
            <!--android:layout_height="110dp"-->
            <!--android:layout_below="@id/separator1"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:id="@+id/videoView" />-->

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:layout_width="200dp"
            android:layout_height="110dp"
            android:layout_below="@id/separator1"
            android:layout_alignParentEnd="true"
            app:showFullScreenButton="false"
            app:showVideoCurrentTime="false"
            app:showVideoDuration="false"
            app:showSeekBar="false"
            android:id="@+id/soundView" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:layout_below="@id/soundView"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/soundView"
            android:visibility="gone"
            android:id="@+id/offsetLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:textColor="@android:color/white"
                android:id="@+id/offsetLabel"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layoutDirection="rtl">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_revert"
                    android:id="@+id/revertButton"
                    android:contentDescription="@string/content_description_opengs_revert" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_add"
                    android:id="@+id/addButton"
                    android:contentDescription="@string/content_description_opengs_add" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_remove"
                    android:id="@+id/decreaseButton"
                    android:contentDescription="@string/content_description_opengs_decrease" />


            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/offsetLayout"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:ellipsize="marquee"
                android:textColor="@android:color/white"
                android:id="@+id/statusLabel"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/topLayout"
        android:layout_above="@id/bottomLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="invisible"
            android:id="@+id/gifView"
            android:contentDescription="@string/content_description_opengs_gif" />

        <VideoView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:id="@+id/mp4View"/>

    </RelativeLayout>

</RelativeLayout>
